Some improvements as suggested by fallaha56

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,11 @@ project(angrylion-rdp-plus)
 
 set(CMAKE_CXX_STANDARD 14)
 set(COMPILE_DEFINITIONS -O3 -Wall -Wextra -Winline)
-set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 find_package(Git REQUIRED)
 find_package(PythonInterp 3.2 REQUIRED)
 find_package(SDL2 REQUIRED)
+find_package(OpenGL REQUIRED)
 
 # RDP core
 set(PATH_CORE "core")
@@ -26,7 +26,11 @@ add_custom_command(
 )
 
 file(GLOB SOURCES_CORE "${PATH_CORE}/*.c" "${PATH_CORE}/*.cpp")
-add_library(core OBJECT ${SOURCES_CORE} ${PATH_VERSION_OUT})
+add_library(core STATIC ${SOURCES_CORE} ${PATH_VERSION_OUT})
+
+if ( NOT MINGW )
+    set_target_properties(core PROPERTIES POSITION_INDEPENDENT_CODE ON)
+endif ( NOT MINGW )
 
 # Mupen64Plus GFX plugin
 set(PATH_PLUGIN_M64P "plugin-mupen64plus")
@@ -34,8 +38,11 @@ set(PATH_PLUGIN_M64P "plugin-mupen64plus")
 include_directories(${CMAKE_SOURCE_DIR})
 
 file(GLOB SOURCES_PLUGIN_M64P "${PATH_PLUGIN_M64P}/*.c")
-add_library(mupen64plus-video-angrylionplus SHARED ${SOURCES_PLUGIN_M64P} $<TARGET_OBJECTS:core>)
+add_library(mupen64plus-video-angrylionplus SHARED ${SOURCES_PLUGIN_M64P})
+
 set_target_properties(mupen64plus-video-angrylionplus PROPERTIES PREFIX "")
+
+target_link_libraries(mupen64plus-video-angrylionplus core ${OPENGL_LIBRARIES})
 
 # RDP retracer
 set(PATH_RETRACER "retrace")
@@ -43,6 +50,6 @@ set(PATH_RETRACER "retrace")
 include_directories(${PATH_CORE})
 
 file(GLOB SOURCES_RETRACE "${PATH_RETRACER}/*.c")
-add_executable(retrace ${SOURCES_RETRACE} $<TARGET_OBJECTS:core>)
+add_executable(retrace ${SOURCES_RETRACE})
 
-target_link_libraries(retrace pthread SDL2)
+target_link_libraries(retrace core pthread SDL2)
