--- a/core/version.h.in
+++ b/core/version.h.in
@@ -4,3 +4,11 @@
 #define GIT_TAG "@GIT_TAG@"
 #define GIT_COMMIT_HASH "@GIT_COMMIT_HASH@"
 #define GIT_COMMIT_DATE "@GIT_COMMIT_DATE@"
+
+#define CORE_BASE_NAME "angrylion's RDP Plus"
+
+#ifdef _DEBUG
+#define CORE_NAME CORE_BASE_NAME " " GIT_TAG " (Debug)"
+#else
+#define CORE_NAME CORE_BASE_NAME " " GIT_TAG
+#endif
