--- a/plugin-zilmar/plugin-zilmar.vcxproj.filters
+++ b/plugin-zilmar/plugin-zilmar.vcxproj.filters
@@ -17,13 +17,13 @@
     <ClInclude Include="wgl_ext.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="screen_opengl.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="plugin_zilmar.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="screen_opengl_zilmar.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="gfx_1.3.c">
@@ -32,10 +32,10 @@
     <ClCompile Include="wgl_ext.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="screen_opengl.c">
+    <ClCompile Include="plugin_zilmar.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="plugin_zilmar.c">
+    <ClCompile Include="screen_opengl_zilmar.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
