--- a/plugin-mupen64plus/plugin-mupen64plus.vcxproj.filters
+++ b/plugin-mupen64plus/plugin-mupen64plus.vcxproj.filters
@@ -25,5 +25,17 @@
     <ClInclude Include="plugin_m64p.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="api\m64p_config.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="api\m64p_plugin.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="api\m64p_types.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="api\m64p_vidext.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
