--- a/plugin-mupen64plus/plugin-mupen64plus.vcxproj.filters
+++ b/plugin-mupen64plus/plugin-mupen64plus.vcxproj.filters
@@ -14,18 +14,15 @@
     <ClCompile Include="screen_opengl_m64p.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="plugin_m64p.c">
+    <ClCompile Include="plugin_m64p_new.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="plugin_m64p_new.c">
+    <ClCompile Include="gfx_m64p.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="screen_opengl_m64p.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="plugin_m64p.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="api\m64p_config.h">
@@ -41,6 +38,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="plugin_m64p_new.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gfx_m64p.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
