--- a/plugin-mupen64plus/plugin-mupen64plus.vcxproj
+++ b/plugin-mupen64plus/plugin-mupen64plus.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="gfx_m64p.c" />
-    <ClCompile Include="plugin_m64p_new.c" />
+    <ClCompile Include="plugin_m64p.c" />
     <ClCompile Include="screen_opengl_m64p.c" />
   </ItemGroup>
   <ItemGroup>
@@ -29,7 +29,6 @@
     <ClInclude Include="api\m64p_types.h" />
     <ClInclude Include="api\m64p_vidext.h" />
     <ClInclude Include="gfx_m64p.h" />
-    <ClInclude Include="plugin_m64p_new.h" />
     <ClInclude Include="screen_opengl_m64p.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
