Created custom msg.c implementation for each plugin/tool for better flexibility

--- a/plugin-mupen64plus/plugin-mupen64plus.vcxproj.filters
+++ b/plugin-mupen64plus/plugin-mupen64plus.vcxproj.filters
@@ -20,6 +20,9 @@
     <ClCompile Include="plugin_m64p.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="msg.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="screen_opengl_m64p.h">
