--- a/retrace/retrace.vcxproj.filters
+++ b/retrace/retrace.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="screen_headless.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="msg.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
