--- a/plugin-mupen64plus/plugin-mupen64plus.vcxproj
+++ b/plugin-mupen64plus/plugin-mupen64plus.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="gfx_m64p.c" />
+    <ClCompile Include="msg.c" />
     <ClCompile Include="plugin_m64p.c" />
     <ClCompile Include="screen_opengl_m64p.c" />
   </ItemGroup>
